--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -67,6 +67,7 @@ body{
     z-index: 2;
 
     box-shadow: rgba(120 120 120 / 30%) 0 1px 10px;
+    animation: dark-to-light 0.3s ease-in-out;
 }
 
 #cabecalho{
@@ -119,7 +120,7 @@ main{
 .descricao{
     display: flex;
     flex-direction:column;
-    text-align: center;
+    text-align:center;
     align-items: center;
 }
 
@@ -127,6 +128,7 @@ main{
     font-size: 1rem;
     font-weight: 400;
     color: var(--black-60);
+    text-align: start;
 }
 
 .descricao h2{
@@ -143,158 +145,33 @@ main{
     margin-bottom: 20px;
     justify-content: center;
     border-radius: 25px;
+    
 }
 
-/*Download Bula--------------------------------*/
+/*Conteudo----------------------------------------*/
 
-.download_bula a{
-    display: flex;
-    gap: 10px;
-    text-decoration: none;
-    color: var(--green-10);
-    font-size: 0.9rem;
-    align-items: center;
-    font-weight: 600;
-    margin-top: 10px;
-    margin-bottom: 30px;
-}
-
-.download_bula i{
-    color: var(--green-10);
-    font-size: 0.9rem;
-}
-
-.download_bula:hover{
-     transform: scale(1.05);
-}
-
-/*Show Hide--------------------------------*/
-
-.adicional button{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-around;
-    background-color:rgba(255, 255, 255, 0);
-    width: 100%;
-    border:none;
-    padding: 40px 0 20px 0;
-    cursor:pointer;
-   
-}
-
-
-
-#info_adicional{
-    margin-top: 40px;
-    width: 100%;
-    max-width: 700px;
+main .conteudo{
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    
-}
-
-.adicional{
-    width: 100%;
-    margin-bottom: 180px;
-}
-
-.adicional button{
-    width:100%;
-    display:flex;
-    height:50px;
-    justify-content:space-between;
-    flex-direction:row;
+    gap: 10px;
+    margin-top: 20px;
     align-items: center;
-    gap:30px;
-    padding: 35px 0;
-
-    font-family: 'Roboto', sans-serif;
-    font-weight: 600;
+    justify-content: center;
     font-size: 1rem;
+    height: 100vw;
 }
 
-.hide_name{
-    display: flex;
-    gap: 15px;
-    color: var(--black-60) ;
-    font-size: 0.9rem;
-    height: 20px;
-}
-
-.texto{
-    padding: 20px;
-    font-size: 0.8rem;
-}
-
-#info_adicional .adicional{
-    gap: 30px;
-}
-
-#info_adicional li{
-    list-style: none;
-}
-
-.fa-circle-plus, .fa-circle-minus {
-    color: var(--black-20);
-}
-
-.audio{
-    padding: 10px;
-}
-
-.audio audio{
-    width: 100%;
-}
-
-.hide_name:hover{
-    color: var(--black-80);
-}
-.fa-circle-plus:hover, .fa-circle-minus:hover{
-    color: var(--black-80);
-}
-
-.adicional hr{
-    border: none;
-    background-color: var(--black-20);
-    height: 0.7px;
-    border-radius: 2px;
-}
-
-/*Video--------------------------------*/
-.video iframe{
-    width: 100%;
+.conteudo_item{
     
-}
-
-.video{
-    width: 100%;
-}
-
-/*Show hide - Display none--------------------------------*/
-
-.info_hide_1{
-    display: none;
-}
-
-.info_hide_2{
-    display: none;
-}
-
-.info_hide_3{
-    display: none;
-}
-
-#medicamento_smart{
-    display:none;
+    text-decoration: none;
+    color: var(--black-80);
 }
 
 /*Footer--------------------------------*/
 
 #rodape{
     background:var(--lightt);
-    height: 110px;
+    height: 80px;
     position: fixed;
     bottom: 0px;
     left: 0px;
@@ -437,7 +314,7 @@ main{
     }   
 }
 
-@media(max-width:560px){
+@media(max-width:740px){
     #cabecalho h1{
         visibility: hidden;
         width: 1px;
